# num-utils-ng

./: INSTALL  Makefile  Makefile.am  Makefile.in  README  aclocal.m4  config.h.in  configure  configure.ac
debian/: changelog  control  copyright  files  rules
docs/: Makefile  Makefile.am  Makefile.in  README  average.1  bound.1  interval.1  model1.cls  normalize.1  num-utils-ng.tex  numaverage.1  numbound.1  numgrep.1  numinterval.1  numnormalize.1  numprocess.1  numrandom.1  numrange.1  numround.1  numsum.1  random.1  round.1
docs/bib/: references.bib
docs/fig/: Memallouee.eps  MoyenneMediane.eps  NumboundNumround.eps  autotool.eps  beteacorne.eps  branche.eps  font.eps  lastPage.eps  median.eps  numgrep.eps  numprocess.eps  randomrange.eps
docs/html/: index.html  numaverage.html  numbound.html  numgrep.html  numinterval.html  numnormalize.html  numprocess.html  numrandom.html  numrange.html  numround.html  numsum.html
docs/tex/: abstract.tex  abstract.tex~  annexe1.tex  annexe2.tex  cdcf.tex  conclusion.tex  conclusion.tex~  glossary.tex  glossary.tex~  introduction.tex  introduction.tex~  macro.tex  num_utils.tex  outils_utilises.tex  planning.tex  tests_optimisations.tex  title.tex  title.tex~
src/: Makefile  Makefile.am  Makefile.in  average.c  bound.c  calculAverage.c  interval.c  normalize.c  numAverage.c  numaverage.c  numbound.c  numgrep.c  numinterval.c  numnormalize.c  numprocess.c  numrandom.c  numrange.c  numround.c  numsum.c  process.c  random.c  range.c  round.c  sum.c  utils.c  utils.h
tests/: Makefile  Makefile.am  Makefile.in  README  test1  test2  test3  testaverage.sh  testaverage0.sh  testaverage1.sh  testaverage10.sh  testaverage11.sh  testaverage12.sh  testaverage13.sh  testaverage14.sh  testaverage2.sh  testaverage3.sh  testaverage4.sh  testaverage5.sh  testaverage6.sh  testaverage7.sh  testaverage8.sh  testaverage9.sh  testbound.sh  testbound0.sh  testbound1.sh  testbound2.sh  testbound3.sh  testbound4.sh  testbound5.sh  testbound7.sh  testinterval.sh  testnormalize.sh  testnumgrep.sh  testnumprocess.sh  testnumsum.sh  testprocess.sh  testrandom.sh  testrange.sh  testround.sh
