AM_CPPFLAGS=-Wall
AM_LDFLAGS=-lm

bin_PROGRAMS = average numbound numinterval numnormalize numgrep numprocess numsum numrandom numround numrange
average_LDFLAGS = $(AM_LDFLAGS)
average_SOURCES = average.c
numbound_SOURCES = numbound.c
numinterval_SOURCES = numinterval.c
numnormalize_SOURCES = numnormalize.c
numgrep_SOURCES = numgrep.c
numprocess_SOURCES = numprocess.c
numsum_SOURCES = numsum.c
numrandom_SOURCES = numrandom.c
numround_SOURCES = numround.c
numrange_SOURCES = numrange.c
