AM_CPPFLAGS=-Wall
AM_LDFLAGS=-lm

bin_PROGRAMS = numaverage numbound numinterval numnormalize numgrep numprocess numsum numrandom numround numrange
numaverage_LDFLAGS = $(AM_LDFLAGS)
numaverage_SOURCES = numaverage.c
numbound_SOURCES = numbound.c
numinterval_SOURCES = numinterval.c
numnormalize_SOURCES = numnormalize.c
numgrep_SOURCES = numgrep.c
numprocess_SOURCES = numprocess.c
numsum_SOURCES = numsum.c
numrandom_SOURCES = numrandom.c
numround_SOURCES = numround.c
numrange_SOURCES = numrange.c
