check_SCRIPTS = testaverage0.sh testaverage1.sh testaverage2.sh testaverage3.sh testaverage4.sh testaverage5.sh testaverage6.sh testaverage7.sh testaverage8.sh testaverage9.sh testaverage10.sh testaverage11.sh \
				#testbound.sh testinterval.sh testnormalize.sh testnumgrep.sh testnumsum.sh testnumprocess.sh testrandom.sh testround.sh testrange.sh
TESTS = $(check_SCRIPTS)
TESTS_ENVIRONMENT=PATH=../src:$$PATH
EXTRA_DIST = $(check_SCRIPTS)

